assets/css/main.css
/* ... */
.navbar-nav {
    margin-top: 20px;
}

.navbar-nav > li:first-child {
    border-right: 1px solid #275284;
}

.navbar-nav > li:last-child > a {
    padding-right: 0;
}

.nav > li > a {
    display: inline;
}

    @media only screen and (max-width : 768px) {
        .nav > li > a {
            padding: 0;
        }
    }

.gallery-nav a {
    text-decoration: underline;
}

.content-container .gallery-nav h1.title {
    margin-top: 0;
    margin-bottom: 1.5em;
    color: #00599c;
    font-family: "Roboto",sans-serif;
    font-size: 1.8em;
    font-weight: 300;
    display: inline-block;
    line-height: 1.5em;
}

.thumbnail {
    border-radius: 0;
    overflow: hidden;
    height: 230px;
    border: none !important;
    padding: 0;
}

    @media screen and (max-width: 40.5em) {
        .thumbnail {
            height: 170px;
        }
    }

    @media screen and (max-width: 30.5em) {
        .thumbnail {
            height: 90px;
        }
    }

.thumbnail img {
    background-size: cover;
    width: 100%;
}

.hero-unit {
    height: 500px;
    background: #eee;
    color: #ff8400;
    background-size: cover;
    background: url('../img/tax_design_challenge_hero-2.jpeg') repeat scroll right center / cover; 
    position: relative;
}

.hero-inset {
    position: absolute;
    /*padding: 24px 20px;*/
    top: 80px;
    width: 55%;
    font-size: 1.2em;
    z-index: 2;
}

@media only screen and (max-width : 992px) {
    .banner-full .hero-unit .hero-inset {
        padding: 0 15px 10px;
    }
}

.hero-unit .inset-bg {
    background: transparent;
    position: absolute;
    top: 0; right: 0;
    bottom: 0; left: 0;
    opacity: 0.93;
    padding: 24px 20px;
    width: 100%;
    height: 100%;
    right: 0;
    font-size: 1.2em;
    z-index: -1;
}

.banner-full .hero-unit .hero-inset a.btn {
    margin-right: 1em;
    margin-bottom: 1em;
}

.hero-inset .headline {
    color: #747474; 
    font-size: 20px;
    margin-bottom: 1.2em;
}

.hero-inset .title {
    color: #000;
    font-size: 38px;
}















@media only screen and (max-width: 992px) {
    .hero-inset {
        top: 70px;
        left: 0;
    }

    .hero-unit .inset-bg {
        background: #fff;
        opacity: 0.93;
    }

    .hero-inset .headline {
        font-size: 15px;
    }

    .hero-inset .title {
        font-size: 30px;
    }
}

.hero-inset span {
    color: #838383;
    font-style: italic;
}




    @media only screen and (max-width: 768px) {
        .hero-inset {
            position: absolute;
            /*top: 40px;*/
            width: 90%;
        }
    }




    @media screen and (max-width: 767px) {
        .navbar-nav > li:first-child {
            border-right: 0;
        }

        #navbar .nav.navbar-nav li {
            line-height: 2em;
        }
    }

.hero-inset a.btn {
    background-color: transparent;
    border-color: #00599C;
    border-radius: 0;
    padding: 15px 35px;
    margin-bottom: 25px;
    text-transform: uppercase;
    font-size: 0.9em;
    color: #00599C !important;
}

.hero-inset a.btn:hover {
    background-color: #00599C;
    color: #fff !important;
}

a.btn-ghost {
    border: 2px solid #fff;
    background: transparent;
    color: #fff;
    text-transform: uppercase;
}

a.btn-ghost.hero-sticky {
    position: absolute;
    bottom: 30px;
    right: 40px;
}

.submissions-other-container > div {
    margin: 0 !important;
    padding: 10px !important;
    background-color: #f1f1f1;
}

.submissions-other-container .thumbnail {
    height: auto !important;
}
.submissions-other-container div,
.submissions-other-container div a.thumbnail,
.winners-group-container div a.thumbnail {
    border-color: transparent !important;
}


/* Sidebar */

.sidebar-container {
    margin-top: 1.5em;
    background: #eeeeee;
    background: red;
    position: relative;;
}

.sidebar-container .title {
    margin: 10px 0 35px;
}

.sidebar-items-container {
    height: 60px;
    width: 100%;
    font-family: 'Roboto', sans-serif;
}

.sidebar-items-container.large {
    height: 120px;
}

.sidebar-circle {
    position:relative;
    background:#ff8400;
    width:60px;
    height:60px;
    text-align:center;    
    -webkit-border-radius: 50px;  
    -moz-border-radius: 50px;  
    border-radius: 50px;
    border: 1px solid #fff;
}

.sidebar-circle p {
    font-family: 'Roboto', sans-serif;
    font-size: 30px;
    color:#fff;
    vertical-align:middle;
    height:40px; 
    position: inherit;
    top:12%;        
}

.sidebar-rect {
    position:relative;
    background:#ff8400;
    width:60px;
    height:50px;
    text-align:center;    
    -webkit-border-radius: 5px;  
    -moz-border-radius: 5px;  
    border-radius: 5px;
    border: 1px solid #fff;
}

.sidebar-rect p {
    font-family: 'Roboto', sans-serif;
    font-size: 30px;
    color:#fff;
    vertical-align:middle;
    height:40px; 
    position: inherit;
    top:5%;        
}

.sidebar-box {
    background: #a5a2a2;
    padding: 8px;
    color: #fff;
}

.content-container h3 {
    color: #00599C;
}

/* Submissions */

.content-submission-container {
    margin: 0.8em 0 2em 0;
}

.content-submission-container .thumbnail-gallery {
    border: 1px solid #000;
    height: 100%;
    width: 100%;
}

/* Winners */

.content-submissions-container {
    background: #fff;
    padding: 0 12px 0 0;
    border: 1px solid #eee;
    margin-bottom: 2em;
    float: left;
    min-height: 184px;
}

.preview-container {
    margin-left: 200px;
}

.content-submissions-container img {
    float: left;
    margin-right: 25px;
    width: 172px;
}

    @media screen and (max-width: 40.5em) {
        .content-submissions-container img {
            margin-bottom: 1em;
        }

        .content-submissions-container {
            padding-right: 0;
        }
    }
/* ... */

